{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "5f5d5491-52ec-4f4a-92ea-a6fdc86a0d07",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "cf450b4c-f998-4562-905f-14fd37133971",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "af35b552-81d4-49a5-ad78-66970c750730",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "087aa9f4-698c-4f46-a137-b1b82733f383",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Quit",
                    "type": "Button",
                    "id": "df5d1c5c-8c0c-42c6-8d7b-edf5214b5ea2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EnableGravity",
                    "type": "Button",
                    "id": "c62400bd-75fd-4ac6-af50-073d26790530",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DisableGravity",
                    "type": "Button",
                    "id": "7f13f536-e4ea-416a-87eb-883164bc1bb1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleCursorLock",
                    "type": "Button",
                    "id": "0539639e-1670-41f3-9cf9-2513cbb1b296",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "e5011cc6-9d76-42ea-8530-d7b74961c1f8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "VRLook",
                    "type": "Value",
                    "id": "f68ddda0-fea9-41ea-a356-b799f65fab69",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "VRLookCont",
                    "type": "Value",
                    "id": "a7ea5d70-929a-4589-9c70-98e6b109a6a5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ScaleUp",
                    "type": "Button",
                    "id": "2ab28db3-efe5-4639-829d-19116110debd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ScaleDown",
                    "type": "Button",
                    "id": "ddcb3ef0-75d4-4880-a864-0f49a0ea9d17",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "3c1df8f2-00ce-4498-a5ba-cc01a30e73cc",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "12eb4ddf-9c0a-41ca-91d4-dba8993f0acd",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9475c7f3-2122-43af-856a-70f8fc705183",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "591c4173-b28b-4c21-ac6b-345355dfc440",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f3b91422-8972-41ed-aa1d-ca144ac6a293",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e4fa9aab-a444-4401-8347-6bead04d30f8",
                    "path": "<XRController>{LeftHand}/joystick",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "875fc18b-e973-4cc1-941d-731dd52fe879",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1cd3ee25-f2c8-4918-b9c9-ec6dc5a156b4",
                    "path": "<XRController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b31cda6-6a6e-4efb-9b29-184cc73c8e6d",
                    "path": "<XRController>{RightHand}/touchpadClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42140ba1-560d-4fb6-a5ae-5fa8f51ff2a3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ad20b07-d10b-4123-88ef-d30d5980f3cb",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Quit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d09a05f-50ce-4320-8598-c972ed74ac43",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "EnableGravity",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eeb7afe4-c071-4d2a-9020-a3f076cc251b",
                    "path": "<XRController>{LeftHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "EnableGravity",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "28d243bc-252d-4c77-9a35-eb9d89ecff07",
                    "path": "<XRController>{LeftHand}/touchpadClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "EnableGravity",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd12fbc3-c318-4339-9514-130893f8cbca",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "DisableGravity",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ba9a152-4885-45ff-aaea-7b50087449aa",
                    "path": "<XRController>{LeftHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "DisableGravity",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c5ad06cc-c6f0-4753-bf0d-452244836a68",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "ToggleCursorLock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cce191ea-5648-4751-82be-e8891c50aeaa",
                    "path": "<WMRSpatialController>{RightHand}/joystickClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "ToggleCursorLock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f92ab67-e85d-447f-8ac4-1d3e34dec7fb",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c49df9df-9d6d-45f8-840c-6b304d6d0b8a",
                    "path": "<XRHMD>/centerEyeRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "VRLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6bc378ad-2ad6-4718-aa4e-fac89b40adf6",
                    "path": "<XRController>{RightHand}/joystick",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "VRLookCont",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd3c9457-b65a-4232-b8a8-0f3b034bec9f",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "ScaleUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "875d734f-50e3-4f2c-84ed-005ed9264c2f",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "ScaleDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": []
        },
        {
            "name": "VR",
            "bindingGroup": "VR",
            "devices": [
                {
                    "devicePath": "<XRHMD>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<XRController>{LeftHand}",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<XRController>{RightHand}",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}